<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    android:background="?attr/colorPrimary">
</android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginBottom="-5dp"/>

    <CalendarView
        android:id="@+id/calendarView1"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-15dp"
        />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:timePickerMode="spinner"
        android:layout_marginBottom="-10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="-5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_date"/>
        <EditText
            android:layout_marginStart="30dp"
            android:layout_width="100dp"
            android:hint="@string/date"
            android:layout_height="wrap_content"
            android:id="@+id/date_edit_text"/>
        <EditText
            android:layout_marginStart="30dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="time"
            android:id="@+id/time_edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_people"/>
        <Button
            android:layout_marginStart="100dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:id="@+id/add_button"
            android:textColor="#ffffff"
            android:background="#a6b727" />
        <TextView
            android:layout_marginStart="20dp"
            android:id="@+id/count_text_view"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/default_people"/>
        <Button
            android:layout_marginStart="20dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textColor="#ffffff"
            android:id="@+id/sub_button"
            android:background="#a6b727"/>

    </LinearLayout>
    <Button
        android:id="@+id/reserve_button"
        android:layout_marginTop="3dp"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/reserve"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="#00b050"/>


</LinearLayout>
